# tesi_reuleaux_tiago

./: README.md  raccolta_comandi.txt  tiago.srdf  tiago.urdf  tiago.xml
base_placement_plugin/: CMakeLists.txt
base_placement_plugin/include/base_placement_plugin/: add_robot_base.h  place_base.h
base_placement_plugin/scripts/: helper.bash
base_placement_plugin/src/: place_base.cpp  point_tree_item.cpp
base_placement_plugin/src/widgets/: base_placement_widget.cpp
base_placement_plugin_renamed/: plugin.xml
base_placement_plugin_renamed/include/base_placement_plugin_renamed/: add_robot_base.h
base_placement_plugin_renamed/src/: add_way_point.cpp  create_marker.cpp  place_base.cpp
base_placement_plugin_renamed/src/widgets/: base_placement_widget.cpp  base_placement_widget.ui
eut_urdf_models/: CMakeLists.txt  README.md  package.xml
eut_urdf_models/launch/: eurecat_tiago_kitchen.launch  everything.launch  kitchen_gazebo.launch  navigation_only.launch  tiago_navigation.launch
eut_urdf_models/maps/eut_kitchen/: map.pgm
eut_urdf_models/rviz/: everything.rviz  urdf.rviz
eut_urdf_models/urdfs/: sink.urdf.xacro
eut_urdf_models/urdfs/sink_furniture/: model.sdf
eut_urdf_models/urdfs/sink_furniture_open/: model.config  model.sdf
eut_urdf_models/worlds/: eut_kitchen copy.world  eut_kitchen.world  eut_kitchen_markers.world
grasp/: README.md
map_creator/include/map_creator/: kinematics.h
moveit_grasps/: CMakeLists.txt  package.xml
moveit_grasps/config/: moveit_grasps_config.yaml
moveit_grasps/config_robot/: tiago_grasp_data.yaml
moveit_grasps/launch/: grasp_filter_demo.launch  grasp_generator_demo.launch  grasp_pipeline_demo.launch  grasp_poses_visualizer_demo.launch  load_tiago.launch  rviz.launch
moveit_grasps/launch/rviz/: grasps.rviz
moveit_grasps/src/demo/: grasp_generator_demo.cpp  grasp_pipeline_demo.cpp  grasp_poses_visualizer_demo.cpp  suction_grasp_pipeline_demo.cpp
reuleaux/: README.md
reuleaux/base_placement_plugin/: CMakeLists.txt  README.md  package.xml  plugin.xml
reuleaux/base_placement_plugin/launch/: base_placement.launch  rviz_bp.launch  tiago_base_placement.launch
reuleaux/base_placement_plugin/rviz/: base_placement.rviz
reuleaux/base_placement_plugin/saved_tasks/: all_pick.yaml  pick_and_place_sprite.yaml  pick_mug.yaml  pick_on_table_simple_manuale.yaml  pick_one_each_DEF.yaml  pick_one_each_abbassate.yaml  pick_pringles.yaml  pick_sprite.yaml  place_in_sink.yaml  place_pringles.yaml
reuleaux/base_placement_plugin/scripts/: helper.bash
reuleaux/base_placement_plugin/src/: add_robot_base.cpp  add_way_point.cpp  create_marker.cpp  filter_collision_poses.cpp  filter_collision_poses_server.cpp  place_base.cpp
reuleaux/base_placement_plugin_renamed/: CMakeLists.txt  README.md  package.xml
reuleaux/base_placement_plugin_renamed/launch/: base_placement.launch  moveit_pkgs.launch
reuleaux/base_placement_plugin_renamed/rviz/: base_placement.rviz
reuleaux/base_placement_plugin_renamed/src/: add_robot_base.cpp  point_tree_item.cpp  point_tree_model.cpp
reuleaux/map_creator/: CMakeLists.txt  README.md  package.xml
reuleaux/map_creator/src/: IGNORE_fix_RM_reference_frame.cpp  create_capability_map.cpp  create_inverse_reachability_map.cpp  create_reachability_map.cpp  fix_RM_reference_frame.cpp  hdf5_dataset.cpp  load_capability_map.cpp  (+2 more)
reuleaux/map_generation/: CMakeLists.txt  README.md
reuleaux/reuleaux/: package.xml
reuleaux/saved tasks prova/: prima_prova_task.yaml  prova_altobasso.yaml  prova_centrale_vicini.yaml  task_oggetti.yaml
sim_tiago_kitchen/: CMakeLists.txt  README.md  package.xml
sim_tiago_kitchen/config/: pick_motions.yaml
sim_tiago_kitchen/launch/: eurecat_tiago_kitchen.launch  everything.launch  kitchen_gazebo.launch  pick_and_place.launch  planning_scene_kitchen.launch  tiago.launch  tiago_fakeobjrec_nav.launch  tiago_full_sim.launch  tiago_navigation.launch
sim_tiago_kitchen/maps/backup/kitchen_map/: submap_0.pgm
sim_tiago_kitchen/rviz/: navigation.rviz  navigation_video.rviz
sim_tiago_kitchen/src/: INGORE_load_kitchen_planning_scene.cpp  load_kitchen_planning_scene.cpp  reuleaux_bp_to_nav.cpp  tiago_pick_and_place.cpp
sim_tiago_kitchen/srv/: PickPlaceCall.srv
sim_tiago_kitchen/urdfs/: sink.urdf.xacro
sim_tiago_kitchen/urdfs/kitchen_no_sink/: model.sdf
sim_tiago_kitchen/urdfs/sink_furniture/: model.sdf
sim_tiago_kitchen/urdfs/sink_furniture_open/: model.sdf
sim_tiago_kitchen/worlds/: eut_kitchen copy.world  eut_kitchen.world  eut_kitchen_backup_original_wObj.world
tiago/: README.md  setup.sh
tiago/tiago/: CMakeLists.txt  package.xml
tiago/tiago_ikfast_arm_plugin/: CMakeLists.txt  package.xml  tiago_arm_moveit_ikfast_plugin_description.xml
tiago/tiago_ikfast_arm_torso_plugin/: CMakeLists.txt  package.xml  tiago_arm_torso_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
tiago/tiago_ikfast_arm_torso_plugin/src/: tiago_arm_torso_ikfast_moveit_plugin.cpp
tiago/tiago_moveit_config/: .git - collegamento.lnk  .setup_assistant  CMakeLists.txt  package.xml
tiago_ikfast_arm_torso_plugin/: CMakeLists.txt  package.xml  tiago_arm_torso_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
tiago_ikfast_arm_torso_plugin/src/: tiago_arm_torso_ikfast_moveit_plugin.cpp
tiago_pick_and_place/: CMakeLists.txt
tiago_pick_and_place/config/: pick_and_place_params.yaml  tiago_poses_2.yaml  tiago_poses_central_pile.yaml
tiago_pick_and_place/launch/: old_pick_and_place.launch  pick_and_place.launch  pick_and_place_new.launch  pick_simulation.launch
tiago_pick_and_place/src/: load_kitchen_planning_scene.cpp  pick_place_handler.cpp  pick_place_handler_old_IGNORE.cpp  pick_place_server.cpp  pick_place_server_new.cpp  pick_place_server_old_IGNORE.cpp  pp_server_new_noclass_IGNORE.cpp
tiago_pick_and_place/srv/: PickUpName.srv
useful stuff/: info_ogg_risultati_cap5.txt  raccolta_comandi.txt  raccolta_comandi_navigazione_tiago.txt  raccolta_comandi_uso_reuleaux.txt
useful stuff/_pkgIGNORE_tiago_pick_and_place/: README.md  package.xml
(+123 files in other folders)
